fix scrollbar/scrolling issues issues

--- a/projects/phrag-react/src/App.css
+++ b/projects/phrag-react/src/App.css
@@ -2,7 +2,6 @@
 	width: 100%;
 	height: 100vh;
 	background-image: linear-gradient(#c7f5fd 0 60%, #dbdbdb);
-	overflow-y: hidden;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
-
