--- a/projects/phrag-react/src/components/footer/Footer.css
+++ b/projects/phrag-react/src/components/footer/Footer.css
@@ -4,7 +4,7 @@
 	align-items: center;
 	justify-content: flex-start;
 	width: 100%;
-	margin: 90px 0 30px 0;
+	margin: 70px 0 10px 0;
 }
 
 .footer-inner {
